--- a/web/main.css
+++ b/web/main.css
@@ -210,6 +210,11 @@ main section {
     transition: all 1s;
 }
 
+.moveIn {
+    opacity: 1;
+    top: 0vh;
+}
+
 /* Parallax effect */
 
 .bg-content {
