adding to cart works

--- a/web/wk3/personal/main.css
+++ b/web/wk3/personal/main.css
@@ -80,3 +80,7 @@ button.button:hover {
 .button.disabled:hover {
     text-decoration: none;
 }
+
+.button.warning {
+    background-color: #d23c3c;
+}
