--- a/web/wk3/personal/main.css
+++ b/web/wk3/personal/main.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,900");
 html {
-    --main-btn-color: #009f00;
-    --main-act-color: #d1bb9c;
+    --primary-btn-color: #009f00;
+    --main-btn-color:#206b1f;
     --main-bg-color: #ededed;
+    --act-bg-color: #d1bb9c;
     background-color: var(--main-bg-color);
 }
 
 body {
+    min-width: 800px;
     width: 75vw;
     margin: auto;
     padding: 20px;
@@ -14,6 +16,8 @@ body {
     background-color: white;
     height: 100vh;
     font-family: 'roboto', sans-serif;
+    overflow: hidden;
+    position: relative;
 }
 
 form {
@@ -21,8 +25,20 @@ form {
 }
 
 header {
-    background-color: var(--main-act-color);
+    background-color: var(--act-bg-color);
     padding: 0px 15px;
+}
+
+footer {
+    width: calc(100% - 40px);
+    background-color: var(--act-bg-color);
+    position: absolute;
+    box-sizing: border-box;
+    bottom: 20px;
+    left: 20px;
+    height: 50px;
+    padding: 15px;
+    margin: 0;
 }
 
 /* start templates */
@@ -43,6 +59,10 @@ header {
     /* display: inline-block; */
 }
 
+.flex-end {
+    justify-content: flex-end;
+}
+
 .space-around {
     justify-content: space-around;
 }
@@ -51,7 +71,8 @@ header {
     justify-content: space-between;
 }
 
-button.button {
+button.button,
+input.button {
     background-color: var(--main-btn-color);
     color: white;
     padding: 10px;
@@ -66,11 +87,12 @@ a.button {
     border-radius: 5px;
     padding: 10px;
     text-decoration: none;
+    user-select: none;
 }
 
-a.button:hover,
-button.button:hover {
+.button:hover {
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .button.disabled {
@@ -81,6 +103,27 @@ button.button:hover {
     text-decoration: none;
 }
 
+.button.primary {
+    background-color: var(--primary-btn-color);
+}
 .button.warning {
     background-color: #d23c3c;
+}
+
+/* page specific! */
+
+/* CART */
+#checkout {
+    border: none;
+} 
+#checkout h3 {
+    margin-right: 11%;
+}
+
+/* CONFIRM */
+#shipping input {
+    margin-top: 15px;
+}
+label[for='apt']  {
+    margin-left: 15px;
 }
