--- a/web/wk5/main.css
+++ b/web/wk5/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,900");
 html {
-    --primary-btn-color: #009f00;
-    --secondary-btn-color:#0082ec;
+    --primary-btn-color: #0082ec;
+    --secondary-btn-color:#131397;
     --main-bg-color: #ededed;
     --act-bg-color: #07074c;
     background-color: var(--main-bg-color);
@@ -60,7 +60,16 @@ main,
 }
 
 
+main div {
+    width: 100%;
+    /* border: 2px solid black; */
+    margin: 5px 0;
+    padding: 5px;
+}
 
+img {
+    max-width: 75vw;
+}
 
 /* start templates */
 .borderless {
@@ -92,6 +101,9 @@ h2.section {
     justify-content: flex-end;
 }
 
+.flex-col {
+    flex-direction: column;
+}
 .row-reverse {
     flex-direction: row-reverse;
 }
@@ -115,6 +127,7 @@ input.button {
 }
 
 a.button {
+    text-align: center;
     color: white;
     background-color: var(--secondary-btn-color);
     border-radius: 5px;
@@ -136,11 +149,38 @@ a.button {
     text-decoration: none;
 }
 
-.button.primary {
+.button.btn-primary {
     background-color: var(--primary-btn-color);
 }
 .button.warning {
     background-color: #d23c3c;
 }
 
+.button-lg {
+    font-size: 24pt;
+    padding: 50px;
+}
+
 /* page specific! */
+
+/* HOME */
+#about img {
+    width: 100%;
+}
+
+.main-banner {
+    width: 100%;
+    height: 110px;
+    background-image: url('../images/towerNarrow.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#parts {
+    width: 100%;
+}
+
+#parts a {
+    width: calc((100% / 3) - 50px);
+}
