--- a/web/wk5/style/main.css
+++ b/web/wk5/style/main.css
@@ -13,7 +13,7 @@ body {
     margin:0;
     font-family: 'roboto', sans-serif;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 form {
@@ -31,7 +31,7 @@ footer {
     background-color: var(--act-bg-color);
     box-sizing: border-box;
     padding: 10px 0;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     bottom: 0;
 }
