--- a/web/wk5/style/main.css
+++ b/web/wk5/style/main.css
@@ -150,7 +150,7 @@ a.button {
 
 .button:hover {
     /* text-decoration: underline; */
-    background-color: red;
+    background-color: var(--hover-btn-color);
     cursor: pointer;
 }
 
