working on update

--- a/web/wk6/style/main.css
+++ b/web/wk6/style/main.css
@@ -175,7 +175,7 @@ a.button {
 }
 
 .button.btn-warning {
-    background-color: rgb(255, 86, 86);
+    background-color: #ff2020;
 }
 
 .button-lg {
