--- a/web/wk6/style/home.css
+++ b/web/wk6/style/home.css
@@ -6,7 +6,7 @@
 .main-banner {
     width: 100%;
     height: 110px;
-    background-image: url('../images/towerNarrow.png');
+    background-image: url('../images/towerNarrow.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
