--- a/web/main.css
+++ b/web/main.css
@@ -13,6 +13,12 @@ body {
     float: right;
 }
 
+#assignments>.sectionWrapper div {
+    vertical-align: top;
+    width: 47%;
+    margin: 0 1%;
+}
+
 /* Default fonts */
 
 * {
